# DNALongBench

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  setup.sh
dnalongbench/: utils.py
dnalongbench.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
dnalongbench/.ipynb_checkpoints/: utils-checkpoint.py
experiments/CNN/: README.md  SimpleCNN.ipynb  cnn.py  task_configs.py  train.py
experiments/Caduceus/Caduceus_CMP_eQTLP_ETGP/: README.md  finetune_contact_map_ph.sh  finetune_eQTLP_ph.sh  inference_ETGP.sh  inference_contact_map.sh  inference_eQTLP.sh
experiments/Caduceus_CMP_eQTLP_ETGP/: finetune_ETGP_ph.sh  requirements.txt
experiments/Caduceus_CMP_eQTLP_ETGP/caduceus/: modeling_caduceus.py
experiments/Caduceus_CMP_eQTLP_ETGP/configs/: config.yaml
experiments/Caduceus_CMP_eQTLP_ETGP/scripts/: inference_contact_map.py  inference_eQTLP.py  train_eQTLP.py
experiments/Evo2/: README.md
experiments/Evo2/logs/: eval_rsap_human_slurm-33703665.out  eval_rsap_human_slurm-33707965.out  eval_rsap_mouse_slurm-33685671.out  eval_tisp_slurm-33704730.out  eval_tisp_slurm-33705632.out  rsap_human_slurm-33684301.out  slurm-jobid.out  tisp_slurm-33538530.out
experiments/Evo2/test/: evaluate_RSAP.py  evaluate_TISP.py  evaluate_eQTLP.py  filetune_contact_map.py  finetune_RSAP.py  finetune_TISP.py  finetune_eQTLP.py
experiments/Evo2_CMP_ETGP/: README.md
experiments/Evo2_CMP_ETGP/test/: evaluate_ETGP.py  finetune_enhancer_promoter.py
experiments/Evo2_CMP_ETGP_eQTLP/: README.md
experiments/Evo2_CMP_ETGP_eQTLP/test/: evaluate_contact_map.py
experiments/GENERator/: .gitignore  Baseline_puffin_3.ipynb  Evaluate_puffin.ipynb  GENERator-Distributed.ipynb  GENERator-SequenceUnderstanding.ipynb  GENERator_TISP-v2.ipynb  GeneRator-CMP-GM12878.ipynb  GeneRator-CMP-H1hESC.ipynb  GeneRator-CMP-HFF.ipynb  GeneRator-CMP-IMR90.ipynb  GeneRator-EQTL-v2.ipynb  GeneRator-EQTL-v3-AltSeq.ipynb  GeneRator-ETGP.ipynb  GeneRator-RSAP-Human-v2.ipynb  GeneRator-RSAP-Human.ipynb  GeneRator-RSAP-Mouse-v2.ipynb  GeneRator-RSAP-Mouse.ipynb  README.md  data_loaders.py  evaluate.py  fsdp.json  fsdp_training.py  fsdp_training2.py  generator_eqtl.py  generator_etgp.py  model.py  run_generator_eqtl.sh  run_generator_etgp.sh  task_configs.py  train.py  utils.py
experiments/GENERator/.ipynb_checkpoints/: Baseline_puffin_3-checkpoint.ipynb  (+15 more)
experiments/HyenaDNA_ETGP_CMP_eQTLP/: README.md  download.py  evaluation.py  evaluation.sh  finetune_ETGP.sh  finetune_akita_HFF.sh  finetune_contact_map.sh  finetune_enhancer_promoter.sh  finetune_eqTL.sh  finetune_eqtl_finetune_whole_blood.sh  inference_ETGP.sh  inference_contact_map.sh  inference_eQTL.sh  train.py  train.sh
experiments/HyenaDNA_RSAP_TISP/: train.py
scripts/: .gitignore  data_loaders.ipynb  utils.py
scripts/.ipynb_checkpoints/: data_loaders-checkpoint.ipynb  data_loaders_o-checkpoint.ipynb  utils-checkpoint.py
(+106 files in other folders)
